update to version 1.0.0, summary indentation fix
Signed-off-by: nadnein <nadjav.18@gmail.com>

--- a/plugins/nf-co2footprint/src/testResources/report_test.html
+++ b/plugins/nf-co2footprint/src/testResources/report_test.html
@@ -257,7 +257,7 @@ summary {
       <dl>
         <dt>Run times</dt>
         <dd>
-          <span id="workflow_start">18-Aug-2025 11:49:46</span> - <span id="workflow_complete">18-Aug-2025 11:49:46</span>
+          <span id="workflow_start">19-Aug-2025 10:15:53</span> - <span id="workflow_complete">19-Aug-2025 10:15:53</span>
           (<span id="completed_fromnow"></span>duration: <strong>null</strong>)
         </dd>
 
@@ -270,7 +270,7 @@ summary {
         <dd>version 24.10.6, build 5937 (23-04-2025 16:53 UTC)</dd>
 
         <dt>nf-co2footprint plugin version</dt>
-        <dd>version 1.0.0-rc.3</dd>
+        <dd>version 1.0.0</dd>
       </dl>
 
       <h3 class="mt-5">Total CO<sub>2</sub>e Footprint Measures</h3>
@@ -1328,7 +1328,7 @@ $(function() {
 
   // Nextflow report data
   window.data = {"trace":[{"task_id":"111","hash":"-","native_id":"-","process":"observerTestProcess","module":"-","container":"-","tag":"-","name":"-","status":"COMPLETED","exit":"-","submit":"-","start":"-","complete":"-","duration":"-","realtime":"1h","%cpu":"100.0%","%mem":"-","rss":"-","vmem":"-","peak_rss":"-","peak_vmem":"-","rchar":"-","wchar":"-","syscr":"-","syscw":"-","read_bytes":"-","write_bytes":"-","attempt":"-","workdir":"-","script":"-","scratch":"-","queue":"-","cpus":"1","memory":"7 GB","disk":"-","time":"-","env":"-","error_action":"-","vol_ctxt":"-","inv_ctxt":"-","hostname":"-","cpu_model":"Unknown model","energy":"14057.5","co2e":"6747.6","co2eMarket":"-","time":"1.0","ci":"480.0","cpus":"1","powerdrawCPU":"11.45","cpuUsage":"100.0","memory":"7","name":"-","cpu_model":"Unknown model"}],"summary":{"observerTestProcess":{"co2e":{"all":[6747.6],"total":6747.6,"mean":6747.6,"minLabel":null,"min":6747.6,"q1Label":null,"q1":6747.6,"q2Label":null,"q2":6747.6,"q3Label":null,"q3":6747.6,"maxLabel":null,"max":6747.6},"energy":{"all":[14057.5],"total":14057.5,"mean":14057.5,"minLabel":null,"min":14057.5,"q1Label":null,"q1":14057.5,"q2Label":null,"q2":14057.5,"q3Label":null,"q3":14057.5,"maxLabel":null,"max":14057.5},"co2e_non_cached":{"all":[6747.6],"total":6747.6,"mean":6747.6,"minLabel":null,"min":6747.6,"q1Label":null,"q1":6747.6,"q2Label":null,"q2":6747.6,"q3Label":null,"q3":6747.6,"maxLabel":null,"max":6747.6},"energy_non_cached":{"all":[14057.5],"total":14057.5,"mean":14057.5,"minLabel":null,"min":14057.5,"q1Label":null,"q1":14057.5,"q2Label":null,"q2":14057.5,"q3Label":null,"q3":14057.5,"maxLabel":null,"max":14057.5},"co2e_market":{},"energy_market":{"all":[14057.5],"total":14057.5,"mean":14057.5,"minLabel":null,"min":14057.5,"q1Label":null,"q1":14057.5,"q2Label":null,"q2":14057.5,"q3Label":null,"q3":14057.5,"maxLabel":null,"max":14057.5}}}};
-  window.options = [{"option":"ci","value":"480.0"},{"option":"ciMarket","value":null},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"machineType","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir2004734060006628429/report_test.html"},{"option":"summaryFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir2004734060006628429/summary_test.txt"},{"option":"traceFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir2004734060006628429/trace_test.txt"}];
+  window.options = [{"option":"ci","value":"480.0"},{"option":"ciMarket","value":null},{"option":"customCpuTdpFile","value":null},{"option":"ignoreCpuModel","value":"false"},{"option":"location","value":null},{"option":"machineType","value":null},{"option":"powerdrawCpuDefault","value":null},{"option":"powerdrawMem","value":"0.3725"},{"option":"pue","value":"1.0"},{"option":"reportFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir3122112454909422922/report_test.html"},{"option":"summaryFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir3122112454909422922/summary_test.txt"},{"option":"traceFile","value":"/var/folders/y4/7wys728x2_b94h_7v_phrl7w0000gn/T/tmpdir3122112454909422922/trace_test.txt"}];
 
   </script>
 
