Chore: Fixes after rebase
Test: Adjusted observer and report json generation
Signed-off-by: Josua Carl <josua.carl@uni-tuebingen.de>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -35,7 +35,7 @@ ${ assets_css.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
 ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
 
     // Nextflow report data
-    window.data = ${payload};
+    window.data = ${data};
     window.options = ${options};
   </script>
 
