Change CO2 to CO₂ in several files
Signed-off-by: nadnein <nadjav.18@gmail.com>

--- a/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
+++ b/plugins/nf-co2footprint/src/resources/assets/CO2FootprintReportTemplate.html
@@ -110,7 +110,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
       </dl>
     </div>
 
-    <!-- TOTAL CO2 cards -->
+    <!-- TOTAL CO₂ cards -->
     <div class="container">
       <h2 id="measures" class="section">CO₂e Footprint Measures</h2>
       <h3 id="measures-total">Total</h3>
@@ -256,7 +256,7 @@ ${ assets_js.join("\n\n\n\n").replaceAll("(?m)^", '    ') }
     </div>
     </div>
 
-    <!-- CO2 footprint measures plot -->
+    <!-- CO₂ footprint measures plot -->
     <div class="container">
       <h3 id="measures-plot">Per process</h3>
       <ul class="nav nav-tabs mb-3" id="co2eplot_tabs" role="tablist">
